--- a/src/index.css
+++ b/src/index.css
@@ -773,10 +773,8 @@ main {
   }
 }
 
-
-
 /* Split Desktop */
-@media (max-width: 1023px) and (max-height: 1023px) {
+@media (max-width: 1023px) and (max-height: 700px) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1013,7 +1011,7 @@ main {
     color: white; /* Makes the link text white */
     text-decoration: none; /* Removes the underline from the links */
     font-size: 18px; /* Sets the font size for the links */
-    padding: 10px 10px; /* Adds padding inside the links */
+    padding: 10px 20px; /* Adds padding inside the links */
     background-color: #4a5c79; /* Sets the background color */
     border-radius: 15px; /* Rounds the corners */
     transition: background-color 0.3s ease; /* Smooth transitions for hover effect */
@@ -1139,19 +1137,26 @@ main {
   .pause-play-btn {
     width: 210px;
   }
-  
-   .close-popup {
-	right: 4px; /* Aligns it to the right */
-	font-size: 10px;
+
+  .contact-page {
+    margin-top: 52px;
+    height: 450px;
+    margin-bottom: 180px;
+  }
+  .contact-form-container {
+    width: 700px;
   }
 
-  .summary-box {
-    width: 840px;
-	height: 440px;
+  .contact-form input,
+  .contact-form textarea {
+    width: 90%; /* Full width inputs */
   }
 
   .contact-form button {
+    padding: 10px 20px; /* Adds padding */
+    font-size: 16px; /* Increases the font size */
     width: 90%; /* Makes the button full width */
+    margin-top: 10px; /* Adds space above the button */
   }
 
   .about-page {
@@ -1264,8 +1269,8 @@ main {
   .nav-links ul li a {
     color: white; /* Makes the link text white */
     text-decoration: none; /* Removes the underline from the links */
-    font-size: 14px; /* Sets the font size for the links */
-    padding: 10px 10px; /* Adds padding inside the links */
+    font-size: 18px; /* Sets the font size for the links */
+    padding: 10px 20px; /* Adds padding inside the links */
     background-color: #4a5c79; /* Sets the background color */
     border-radius: 15px; /* Rounds the corners */
     transition: background-color 0.3s ease; /* Smooth transitions for hover effect */
@@ -1301,6 +1306,7 @@ main {
     }
   }
 
+
   * {
     box-sizing: border-box;
   }
@@ -1308,122 +1314,24 @@ main {
   body {
     background-color: #b0e0e6; /*PowderBlue */
   }
-
-  /* Welcome Section */
-  .welcome-section h1 {
-    font-size: 20px;
-  }
-
-  /* Welcome Section */
-  .welcome-section p {
-    font-size: 14px;
-  }
-
-  /* Main Content Layout */
-  .content-container {
-    width: 200px;
-    margin-bottom: 150px;
-  }
-
-  .info-block {
-    margin-left: 20px;
-    padding: 40px;
-  }
-
-  .info-block h4 {
-    font-size: 14px;
-  }
-
-  .info-block p {
-    font-size: 12px;
-  }
-
-  .info-block a {
-    font-size: 12px;
-  }
-
-  /* Right Column - Usage Instructions */
-  .usage-section {
-    padding: 20px;
-    margin-left: 10px;
-    height: 355px;
-  }
-
-  .usage-section h3 {
-    font-size: 14px;
-  }
-
-  .usage-section p {
-    font-size: 12px;
-  }
-
-  .try-it-btn {
-    padding: 10px 30px; /* Adds padding to the button */
-    font-size: 14px;
-  }
-
-  .popup-content {
-    width: 360px;
-	height: 600px;
-  }
-
-  .popup-content h3 {
-    font-size: 14px;
-  }
   
    .close-popup {
 	right: 4px; /* Aligns it to the right */
-	font-size: 10px;
-  }
-
-  .upload-container {
-    width: 320px; /* Adjusts the container width */
-    padding: 20px; /* Reduces padding for smaller screens */
-  }
-
-  .upload-dropzone {
-    width: 250px; /* Limits dropzone width */
-    height: 80px;
-    margin-left: 20px; /* Adds margin on the left */
-  }
-  
-  .upload-btn {
-    font-size: 14px; /* Adjusts the font size */
-  }
-
-  .upload-dropzone p {
-    font-size: 14px; /* Slightly reduces text size */
-  }
-
-  .file-selected {
-    font-size: 13px; /* Sets the font size */
-  }
-
-  .file-selected .remove-btn {
-    font-size: 16px; /* Sets the font size */
+    font-size: 10px;
   }
 
   .summary-box {
-    width: 320px;
-    height: 430px;
-    font-size: 14px;
-  }
-
-  .download-btn,
-  .do-it-again-btn,
-  .pause-play-btn {
-    width: 100px; /* Full width buttons */
-    font-size: 10px;
-    margin-left: 5px;
+    width: 650px;
+    height: 250px;
   }
 
   .contact-page {
     margin-top: 52px;
-    max-height: 700px;
+    height: 700px;
     margin-bottom: 180px;
   }
   .contact-form-container {
-    width: 300px; /* Sets a max width */
+    width: 300px; 
   }
 
   .contact-form input,
@@ -1490,7 +1398,7 @@ main {
   }
 }
 
-/* Mobile Portrait */
+/* Big Mobile Portrait */
 @media (max-width: 430px) and (max-height: 932px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
@@ -2192,7 +2100,7 @@ main {
   .usage-section {
     padding: 20px;
     margin-left: 10px;
-    height: 336px;
+    height: 338px;
   }
 
   .usage-section h3 {
