--- a/src/index.css
+++ b/src/index.css
@@ -763,7 +763,7 @@ main {
 
 
 /* Full desktop, large protrait tablets, and landscape tablets */
-@media (min-width: 1023px) {
+@media (min-width: 1022px) {
   .menu-button {
     display: none; /* Hides the mobile menu button on large screens */
   }
@@ -774,7 +774,7 @@ main {
 }
 
 /* Split Desktop */
-@media (max-width: 1023px) and (max-height: 700px) {
+@media (max-width: 1022px) and (max-height: 700px) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1971,9 +1971,9 @@ main {
   }
 }
 
-/* Big And Small Mobile Landscape */
+/* Big Mobile Landscape */
 @media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
-  .full-screen-nav-links {
+  .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
 
@@ -2072,6 +2072,279 @@ main {
 
   body {
     background-color: #dda0dd; /*Plum*/
+  }
+
+  /* Welcome Section */
+  .welcome-section h1 {
+    font-size: 20px;
+  }
+
+  /* Welcome Section */
+  .welcome-section p {
+    font-size: 14px;
+  }
+
+  .info-block h4 {
+    font-size: 14px;
+  }
+
+  .info-block p {
+    font-size: 12px;
+  }
+
+  .info-block a {
+    font-size: 12px;
+  }
+
+  /* Right Column - Usage Instructions */
+  .usage-section {
+    padding: 20px;
+    margin-left: 10px;
+    height: 298px;
+  }
+
+  .usage-section h3 {
+    font-size: 14px;
+  }
+
+  .usage-section p {
+    font-size: 12px;
+  }
+
+  .try-it-btn {
+    padding: 10px 30px; /* Adds padding to the button */
+    font-size: 14px;
+  }
+
+  .popup-content {
+    width: 660px;
+    height: 220px;
+  }
+
+  .popup-content h3 {
+    font-size: 14px;
+  }
+
+  .close-popup {
+    right: 4px; /* Aligns it to the right */
+    font-size: 10px;
+  }
+
+  .upload-container {
+    width: 400px;
+    height: 145px;
+    padding: 1px; /* Reduces padding */
+    margin: auto; /* Centers the container */
+    font-size: 12px; /* Reduces font size */
+  }
+
+  .upload-btn {
+    font-size: 12px; /* Reduces button font size */
+    margin: 8px; /* Adds margin around the button */
+    padding: 5px 15px; /* Adds padding inside the button */
+  }
+
+  .upload-dropzone {
+    width: 320px; /* Limits dropzone width */
+    height: 60px;
+    margin-left: 40px; /* Adds margin on the left */
+  }
+
+  .upload-dropzone p {
+    font-size: 12px; /* Reduces text size */
+  }
+
+  .file-selected {
+    font-size: 12px; /* Sets the font size */
+  }
+
+  .file-selected .remove-btn {
+    font-size: 12px; /* Sets the font size */
+  }
+
+  .summary-box {
+    height: 80px;
+    width: 590px;
+    font-size: 12px;
+  }
+
+  .download-btn,
+  .do-it-again-btn,
+  .pause-play-btn {
+    font-size: 10px;
+    width: 190px; /* Full width buttons */
+  }
+
+  .button-icon {
+    margin-right: 10px; /* Adds space between the icon and text */
+    width: 25px; /* Sets the icon width */
+    height: 25px; /* Maintains aspect ratio */
+  }
+
+  .contact-page {
+    margin-top: 52px;
+    height: 500px;
+    margin-bottom: 180px;
+  }
+  .contact-form-container {
+    width: 500px; /* Sets a max width */
+    height: 300px;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    width: 90%; /* Full width inputs */
+  }
+
+  .contact-form button {
+    padding: 10px 20px; /* Adds padding */
+    font-size: 16px; /* Increases the font size */
+    width: 90%; /* Makes the button full width */
+    margin-top: 10px; /* Adds space above the button */
+  }
+
+  .about-page {
+    width: 90%; /* Ensures full width for mobile */
+  }
+
+  about-company h1,
+  .technologies h2,
+  .meet-the-team h1 {
+    font-size: 1.2rem; /* Further reduces title font size */
+    margin-bottom: 15px; /* Minimal space below titles */
+  }
+  .about-description {
+    font-size: 0.8rem; /* Reduces the font size */
+    padding: 5px; /* Reduces padding */
+    word-wrap: break-word; /* Ensures long words wrap */
+    text-overflow: ellipsis; /* Adds ellipsis for overflow */
+    max-width: 100%; /* Ensures the content stays within the viewport */
+  }
+
+  .tech-card {
+    width: 90%;
+    margin-bottom: 20px;
+  }
+
+  .team-member {
+    height: 350px;
+  }
+
+  .team-member img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .team-member h4 {
+    font-size: 0.75rem;
+  }
+
+  .team-member p {
+    font-size: 0.75rem;
+  }
+}
+
+/* Small Mobile Landscape */
+@media (max-width: 852px) and (max-height: 393px) and (orientation: landscape) {
+  .full-screen-nav-links {
+    display: none; /* Hides the desktop navigation on mobile */
+  }
+
+  .menu-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+    right: 10px; /* Positions the button 10px from the right edge */
+    top: 5x; /* Positions the button 10px from the top */
+  }
+
+  .nav-links {
+    display: none; /* Hides the mobile navigation links initially */
+    position: absolute; /* Changes position to absolute */
+    top: 55px; /* Pushes the navigation links down by 55px */
+    left: 0; /* Aligns the navigation to the left */
+    width: 100%; /* Makes the navigation take up the full width */
+    background-color: #1a3d6c; /* Background color */
+    justify-content: center; /* Centers the navigation links */
+    z-index: 9; /* Ensure the navigation appears above other elements */
+    transition: transform 0.3s ease-in-out; /* Smooth transition */
+  }
+
+  /* Show navigation links when the menu is open */
+  .nav-links.open {
+    display: flex; /* Makes links visible */
+    flex-direction: column; /* Stacks links vertically */
+    animation: slideDown 0.1s forwards; /* Sliding down effect */
+  }
+
+  /* Close animation */
+  .nav-links.close {
+    animation: slideUp 0.1s forwards; /* Sliding up effect */
+  }
+
+  .nav-links ul {
+    list-style: none; /* Removes bullets */
+    padding: 0; /* Removes padding around the links */
+    margin: 0; /* Removes margin around the links */
+    display: flex; /* Arranges the links horizontally */
+    gap: 20px; /* Adds space between the links */
+    margin-left: auto;
+    margin-top: 30px; /* Adds 30px of space above the links */
+    margin-bottom: 20px; /* Adds 20px of space below the links */
+  }
+
+  .nav-links ul li {
+    margin: 10px 0; /* Adds space between each link */
+  }
+
+  .nav-links ul li a {
+    color: white; /* Makes the link text white */
+    text-decoration: none; /* Removes the underline from the links */
+    font-size: 18px; /* Sets the font size for the links */
+    padding: 10px 20px; /* Adds padding inside the links */
+    background-color: #4a5c79; /* Sets the background color */
+    border-radius: 15px; /* Rounds the corners */
+    transition: background-color 0.3s ease; /* Smooth transitions for hover effect */
+  }
+
+  .nav-links ul li a:hover {
+    background-color: #3d4e66; /* Changes the background color on hover */
+  }
+
+  .title-card {
+    width: 200px; /* Sets the width of the logo */
+  }
+
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(-20px); /* Start 20px above */
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0); /* Move to original position */
+    }
+  }
+
+  @keyframes slideUp {
+    from {
+      opacity: 1;
+      transform: translateY(0); /* Start at original position */
+    }
+    to {
+      opacity: 0;
+      transform: translateY(-20px); /* Slide 20px up */
+    }
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    background-color: #F08080; /*LightCoral*/
   }
 
   /* Welcome Section */
