--- a/src/index.css
+++ b/src/index.css
@@ -1893,13 +1893,12 @@ main {
     width: 100%; 
 	padding: 10px;
     font-size: 10px;
-    margin-left: auto;
+    margin-left: 2px;
   }
   
   .button-icon {
-    margin-right: 10px; /* Adds space between the icon and text */
-    width: 18px; /* Sets the icon width */
-    height: 18px; /* Maintains aspect ratio */
+    width: 15px; /* Sets the icon width */
+    height: 15px; /* Maintains aspect ratio */
   }
 
   .contact-page {
