--- a/src/index.css
+++ b/src/index.css
@@ -2449,7 +2449,8 @@ main {
   }
 
   .button-icon {
-	margin-right: 10px; /* Adds space between the icon and text */
+	text-align: center;
+	margin-right: 10px; 
     width: 20px; /* Sets the icon width */
     height: 20px; /* Maintains aspect ratio */
   }
