--- a/src/index.css
+++ b/src/index.css
@@ -387,6 +387,7 @@ main {
   height: 32px; /* Maintains aspect ratio */
   margin-right: auto;
   vertical-align: middle; /* Centers the icon with text */
+  
 }
 
 /* Button Styles */
@@ -763,7 +764,7 @@ main {
 
 
 /* Full desktop, large protrait tablets, and landscape tablets */
-@media (min-width: 1022px) {
+@media only screen (min-width: 1022px) {
   .menu-button {
     display: none; /* Hides the mobile menu button on large screens */
   }
@@ -953,7 +954,7 @@ main {
 }
 
 /* Tablet - Portrait */
-@media (max-width: 834px) and (max-height: 1194px) and (orientation: portrait) {
+@media only screen and (max-width: 834px) and (max-height: 1194px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1212,7 +1213,7 @@ main {
 }
 
 /* Mini tablet Portrait */
-@media (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+@media only screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1315,16 +1316,36 @@ main {
     background-color: #b0e0e6; /*PowderBlue */
   }
   
-   .close-popup {
+  .popup-content {
+    width: 450px;
+    height: 400px; /* Limits the height */
+  }
+  
+  .close-popup {
 	right: 4px; /* Aligns it to the right */
     font-size: 10px;
   }
 
   .summary-box {
-    width: 650px;
-    height: 250px;
+    width: 400px;
+    height: 220px;
   }
 
+  .download-btn,
+  .do-it-again-btn,
+  .pause-play-btn {
+    font-size: 11px;
+    width: 100px; 
+	margin-left: 18px;
+  }
+
+  .button-icon {
+	margin-right: 2px; 
+	margin-bottom: 5px;
+    width: 25px; 
+    height: 25px; 
+  }
+  
   .contact-page {
     margin-top: 52px;
     height: 700px;
@@ -1399,7 +1420,7 @@ main {
 }
 
 /* Big Mobile Landscape */
-@media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
+@media only screen and (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1672,7 +1693,7 @@ main {
 }
 
 /* Small Mobile Landscape */
-@media (max-width: 852px) and (max-height: 393px) and (orientation: landscape) {
+@media only screen and (max-width: 852px) and (max-height: 393px) and (orientation: landscape) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1951,7 +1972,7 @@ main {
 }
 
 /* Big Mobile Portrait */
-@media (max-width: 430px) and (max-height: 932px) and (orientation: portrait) {
+@media only screen and (max-width: 430px) and (max-height: 932px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -2236,7 +2257,7 @@ main {
 
 /* Small Mobile Portrait */
 
-@media (max-width: 395px) and (max-height: 852px) and (orientation: portrait){
+@media only screen and (max-width: 395px) and (max-height: 852px) and (orientation: portrait){
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
