--- a/src/index.css
+++ b/src/index.css
@@ -763,8 +763,8 @@ main {
 */
 
 
-/* Full desktop, large protrait tablets, and landscape tablets */
-@media (min-width: 1023px) {
+/* Full desktop, large protrait tablets, and large landscape tablets */
+@media (min-width: 1022px) {
   .menu-button {
     display: none; /* Hides the mobile menu button on large screens */
   }
@@ -774,8 +774,8 @@ main {
   }
 }
 
-/* Split Desktop */
-@media (max-width: 1023px) and (max-height: 1023px) {
+/* Split Desktop and mini tablet landscape*/
+@media (max-width: 1022px) and (max-height: 1023px) and (orientation: landscape){
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
