--- a/src/index.css
+++ b/src/index.css
@@ -1420,7 +1420,7 @@ main {
 }
 
 /* Big Mobile Landscape */
-@media (max-width: 1024px) and (max-height: 600px) and (orientation: landscape) {
+@media (min-width: 853px) and (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1693,7 +1693,7 @@ main {
 }
 
 /* Small Mobile Landscape */
-@media only screen and (max-width: 852px) and (max-height: 393px) and (orientation: landscape) {
+@media (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
