--- a/src/index.css
+++ b/src/index.css
@@ -2266,7 +2266,7 @@ main {
 }
 
 /* Small Mobile Landscape */
-@media (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
+@media only screen and (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
