--- a/src/index.css
+++ b/src/index.css
@@ -1420,7 +1420,7 @@ main {
 }
 
 /* Big Mobile Landscape */
-@media (min-width: 853px) and (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
+@media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -2251,7 +2251,7 @@ main {
   }
 
   .team-member img {
-    width: 80px; /* Profile pic 100px */
+    width: 80px;
     height: 80px;
     margin-bottom: 8px;
   }
