--- a/src/index.css
+++ b/src/index.css
@@ -2186,21 +2186,23 @@ main {
   .summary-box {
     height: 80px;
     width: 460px;
-    font-size: 12px;
+    font-size: 10px;
   }
 
   .download-btn,
   .do-it-again-btn,
   .pause-play-btn {
-    font-size: 10px;
+    font-size: 9px;
     width: 100%; /* Full width buttons */
   }
 
   .button-icon {
-    margin-right: 10px; /* Adds space between the icon and text */
+	text-align: center;
+	margin-right: 10px; 
     width: 20px; /* Sets the icon width */
     height: 20px; /* Maintains aspect ratio */
   }
+
 
   .contact-page {
     margin-top: 52px;
