--- a/src/index.css
+++ b/src/index.css
@@ -774,8 +774,8 @@ main {
   }
 }
 
-/* Split Desktop and mini tablet landscape*/
-@media (max-width: 1022px) and (max-height: 1022px) {
+/* Split Desktop */
+@media (max-width: 1020px) and (max-height: 2160px) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -954,7 +954,7 @@ main {
 }
 
 /* Tablet - Portrait */
-@media only screen and (max-width: 834px) and (max-height: 1194px) and (orientation: portrait) {
+@media only screen and (max-width: 835px) and (max-height: 1195px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1420,7 +1420,7 @@ main {
 }
 
 /* Big Mobile Portrait */
-@media only screen and (max-width: 430px) and (max-height: 932px) and (orientation: portrait) {
+@media only screen and (max-width: 435px) and (max-height: 935px) and (orientation: portrait) {
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
