--- a/src/index.css
+++ b/src/index.css
@@ -1026,7 +1026,8 @@ main {
   }
 
   .content-container {
-   width: 100%;
+   width: 800px;
+   margin-left: 25px;
  }
   
   .model-section {
@@ -1037,6 +1038,13 @@ main {
   .instructions-section {
    bottom: 130px; /* Align it to the bottom */
   }
+
+.image-popup-content {
+  width: 750px;
+  height: 500px;
+}
+
+
 
   .popup-content {
     width: 600px;
@@ -1241,6 +1249,16 @@ font-size: 14px;
 
 .instruction-item-five p{
 font-size: 14px;
+}
+
+.image-popup-content {
+  width: 750px;
+  height: 500px;
+}
+
+.popup-image {
+  width: 100%;
+  height: 100%;
 }
 
   .popup-content {
@@ -1522,7 +1540,15 @@ font-size: 14px;
 	margin-bottom: 70px;
   }
 
+.image-popup-content {
+  width: 650px;
+  height: 500px;
+}
 
+.popup-image {
+  width: 100%;
+  height: 100%;
+}
 
   .popup-content {
     width: 450px;
@@ -1772,6 +1798,15 @@ font-size: 14px;
   }
 
 
+.image-popup-content {
+  width: 350px;
+  height: 500px;
+}
+
+.popup-image {
+  width: 100%;
+  height: 100%;
+}
 
   .popup-content {
     width: 360px;
@@ -2115,6 +2150,16 @@ font-size: 10px;
   height: 15px;
 }
 
+.image-popup-content {
+  width: 280px;
+  height: 400px;
+}
+
+.popup-image {
+  width: 95%;
+  height: 95%;
+}
+
   .popup-content {
     width: 260px;
 	height: 450px;
@@ -2360,11 +2405,12 @@ font-size: 10px;
   }
   
   .content-container {
-   width: 600px;
+   width: 530px;
+   margin-left: 10px;
  }
   
  .mission-block {
-  width: 600px;
+  //width: 600px;
  }
  
  .mission-block h3{
@@ -2390,7 +2436,7 @@ font-size: 12px;
 
   .model-section {
    margin-bottom: 140px;
-   width: 600px;
+   //width: 600px;
   }
 
 .model-section h4{
@@ -2457,6 +2503,16 @@ font-size: 10px;
 .footer-social a img {
   width: 15px;
   height: 15px;
+}
+
+.image-popup-content {
+  width: 480px;
+  height: 250px;
+}
+
+.popup-image {
+  width: 95%;
+  height: 95%;
 }
 
   .popup-content {
