--- a/src/index.css
+++ b/src/index.css
@@ -2423,6 +2423,10 @@ font-size: 10px;
   font-size: 10px;
  }
  
+ .recent-bills-section{
+ position:relative;
+ }
+ 
 .recent-bills-section h3{
 font-size: 12px;
 }
