--- a/src/index.css
+++ b/src/index.css
@@ -2403,24 +2403,26 @@ font-size: 10px;
   .content-container {
    width: max(400px, 500px); 
    margin-left: max(18px, 35px, 48px);
+   font-size: max(8px, 10px);
  }
+ 
  .mission-block {
-  font-size: max(8px, 10px);
+  //font-size: max(8px, 10px);
  }
  
 .recent-bills-section {
-font-size: max(8px, 10px);
+//font-size: max(8px, 10px);
 }
 
   .model-section {
    margin-bottom: 140px;
-  font-size: max(8px, 10px);
+  //font-size: max(8px, 10px);
   }
 
   
   .instructions-section {
    bottom: 100px;
-   font-size: max(8px, 10px);
+   //font-size: max(8px, 10px);
   }
 
   .try-it-btn {
