--- a/src/index.css
+++ b/src/index.css
@@ -152,8 +152,8 @@ main {
 
 .instruction-item-two-to-four {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: auto auto auto;
+    column-gap: 20px;
     text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
